--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@
 
 # Qt-es
 
-/.qmake.cache
-/.qmake.stash
+.qmake.cache
+.qmake.stash
 *.pro.user
 *.pro.user.*
 *.moc
@@ -32,5 +32,5 @@ Makefile*
 *.qmlproject.user.*
 
 # Others
-
+imports
 *.xcf
