--- a/cool-old-term.desktop
+++ b/cool-old-term.desktop
@@ -4,7 +4,7 @@ Exec=qmlscene -I /usr/share/cool-old-term/{imports,app/main.qml}
 GenericName=Terminal emulator
 Icon=utilities-terminal
 MimeType=
-Name=Cool Old Terminal
+Name=Cool Old Term
 Path=
 Categories=Qt;System;TerminalEmulator;
 StartupNotify=true
