--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -4,6 +4,8 @@ Section: misc
 Priority: optional
 Standards-Version: 3.9.6
 Homepage: https://github.com/Swordfish90/cool-retro-term
+Vcs-Git: git://github.com/barak/cool-retro-term.git
+Vcs-Browser: https://github.com/barak/cool-retro-term
 Build-Depends: debhelper (>= 9),qmlscene,
  qt5-qmake, qtdeclarative5-dev, qml-module-qtquick-controls,
  qml-module-qtgraphicaleffects, qml-module-qtquick-dialogs,
