--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -1,12 +1,12 @@
 Source: cool-retro-term
 Maintainer: Jeka Der <jekader@gmail.com>
-Section: misc
+Section: x11
 Priority: optional
 Standards-Version: 3.9.6
 Homepage: https://github.com/Swordfish90/cool-retro-term
 Vcs-Git: git://github.com/barak/cool-retro-term.git
 Vcs-Browser: https://github.com/barak/cool-retro-term
-Build-Depends: debhelper (>= 9),qmlscene,
+Build-Depends: debhelper (>= 9), qmlscene,
  qt5-qmake, qtdeclarative5-dev, qml-module-qtquick-controls,
  qml-module-qtgraphicaleffects, qml-module-qtquick-dialogs,
  qml-module-qtquick-localstorage, qml-module-qtquick-window2
@@ -14,7 +14,10 @@ Build-Depends: debhelper (>= 9),qmlscene,
 Package: cool-retro-term
 Architecture: any
 Replaces: cool-old-term
-Depends: qml-module-qtquick-controls, qml-module-qtgraphicaleffects, qml-module-qtquick-dialogs, qml-module-qtquick-localstorage, qml-module-qtquick-window2, ${shlibs:Depends}, ${misc:Depends}
+Provides: x-terminal-emulator
+Depends: qml-module-qtquick-controls, qml-module-qtgraphicaleffects,
+ qml-module-qtquick-dialogs, qml-module-qtquick-localstorage,
+ qml-module-qtquick-window2, ${shlibs:Depends}, ${misc:Depends}
 Description: terminal emulator which mimics old screens
  cool-retro-term is a terminal emulator which mimics the look and feel
  of the old cathode tube screens. It has been designed to be eye-candy,
