placate desktop-file-validate and lintian
$ lintian cool-retro-term_*.deb | egrep desktop
I: cool-retro-term: desktop-entry-lacks-keywords-entry usr/share/applications/cool-retro-term.desktop
W: cool-retro-term: desktop-mime-but-no-exec-code usr/share/applications/cool-retro-term.desktop

$ desktop-file-validate cool-retro-term.desktop
cool-retro-term.desktop: hint: value "Qt;System;Utility;TerminalEmulator;" for key "Categories" in group "Desktop Entry" contains more than one main category; application might appear more than once in the application menu

--- a/cool-retro-term.desktop
+++ b/cool-retro-term.desktop
@@ -3,9 +3,9 @@ Comment=Use the command line the old way
 Exec=cool-retro-term
 GenericName=Terminal emulator
 Icon=cool-retro-term
-MimeType=
 Name=Cool Retro Term
-Categories=Qt;System;Utility;TerminalEmulator;
+Categories=System;TerminalEmulator;
 StartupNotify=true
 Terminal=false
 Type=Application
+Keywords=shell;prompt;command;commandline;
