--- a/packaging/debian/rules
+++ b/packaging/debian/rules
@@ -1,4 +1,11 @@
 #!/usr/bin/make -f
+
+export QT_SELECT = 5
+
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
+
 %:
 	dh $@ --parallel
 
