--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,26 @@
+sudo: required
+dist: trusty
+language: c++
 
+install:
+  - sudo add-apt-repository -y ppa:beineri/opt-qt58-trusty
+  - sudo apt-get update
+  - sudo apt-get -y install build-essential qt58declarative
+
+script:
+  - source /opt/qt58/bin/qt58-env.sh
+  - cd cool-retro-term
+  - qmake
+  - make -j2
+  - mkdir -p appdir/usr/share/appdata appdir/usr/bin
+  - cp packaging/appdata/cool-retro-term.appdata.xml appdir/usr/share/appdata/
+  - cp cool-retro-term appdir/usr/bin/
+  - cp ./cool-retro-term.desktop appdir/
+  - cp ./app/icons/128x128/cool-retro-term.png appdir/
+  - cp -r ./app/qml appdir/usr/
+  - cp -r qmltermwidget/QMLTermWidget/ appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
+  - wget -c https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
+  - chmod a+x linuxdeployqt-continuous-x86_64.AppImage 
+  - ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/bin/cool-retro-term -qmldir=.
+  - export VERSION=$(git rev-list --count HEAD).$(git describe --tags | cut -d - -f 3)
+  - ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/bin/cool-retro-term -qmldir=. -appimage
