Use linuxdeployqt-3-x86_64.AppImage

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - chmod a+x linuxdeployqt-continuous-x86_64.AppImage 
   - ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/bin/cool-retro-term -qmldir=.
   - export VERSION=$(git rev-list --count HEAD).$(git describe --tags | cut -d - -f 3)
-  - ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/bin/cool-retro-term -qmldir=. -appimage
+  - ./linuxdeployqt-3-x86_64.AppImage appdir/usr/bin/cool-retro-term -qmldir=. -appimage
 
 # See https://github.com/probonopd/uploadtool/ for a way to upload to GitHub Releases automatically
 after_success:
