find /opt/qt58/ | grep QtGraphicalEffects

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - cp ./app/icons/128x128/cool-retro-term.png appdir/
   - cp -r ./app/qml appdir/usr/
   - cp -r qmltermwidget/QMLTermWidget/ appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
+  - find /opt/qt58/ | grep QtGraphicalEffects # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
   - wget -c https://github.com/probonopd/linuxdeployqt/releases/download/3/linuxdeployqt-3-x86_64.AppImage
   - chmod a+x linuxdeployqt-*.AppImage 
   - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/
