--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: c++
 install:
   - sudo add-apt-repository -y ppa:beineri/opt-qt58-trusty
   - sudo apt-get update
-  - sudo apt-get -y install build-essential qt58declarative libgl1-mesa-dev
+  - sudo apt-get -y install build-essential qt58declarative qt58graphicaleffects qt58quickcontrols libgl1-mesa-dev
 
 script:
   - source /opt/qt58/bin/qt58-env.sh
