--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,11 @@ script:
   - cp ./cool-retro-term.desktop appdir/
   - cp ./app/icons/128x128/cool-retro-term.png appdir/
   - cp -r ./app/qml appdir/usr/
-  - # cp -r /opt/qt*/qml/QtGraphicalEffects appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
-  - # cp -r /opt/qt*/qml/QtQuick.2 appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
-  - # mkdir -p appdir/usr/qml/QtQuick/ ; cp -r /opt/qt*/qml/QtQuick/Controls appdir/usr/qml/QtQuick/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
   - cp -r ./qmltermwidget/QMLTermWidget appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
   - wget -c https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
   - chmod a+x linuxdeployqt-*.AppImage 
-  - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ # -verbose=3 2>&1 | grep "path:" -C 3
-  - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ -appimage
+#  - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ # -verbose=3 2>&1 | grep "path:" -C 3
+  - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ -verbose=2 -appimage
   
 # See https://github.com/probonopd/uploadtool/ for a way to upload to GitHub Releases automatically
 after_success:
