--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ language: c++
 
 install:
   - sudo add-apt-repository -y ppa:beineri/opt-qt58-trusty
-  - sudo apt-get update
+  - sudo apt-get update -qq
   - sudo apt-get -y install build-essential qt58declarative qt58graphicaleffects qt58quickcontrols libgl1-mesa-dev
+  - source /opt/qt*/bin/qt*-env.sh
 
 script:
-  - source /opt/qt58/bin/qt58-env.sh
-  - qmake
-  - make -j2
+  - qmake CONFIG+=release PREFIX=/usr
+  - make -j$(nproc)
   - mkdir -p appdir/usr/share/appdata appdir/usr/bin
   - cp packaging/appdata/cool-retro-term.appdata.xml appdir/usr/share/appdata/
   - cp cool-retro-term appdir/usr/bin/
@@ -20,6 +20,8 @@ script:
   - cp -r ./qmltermwidget/QMLTermWidget appdir/usr/qml/ # Workaround for https://github.com/probonopd/linuxdeployqt/issues/78
   - wget -c https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage
   - chmod a+x linuxdeployqt-*.AppImage 
+  - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
+  - export VERSION=$(git rev-parse --short HEAD) # linuxdeployqt uses this for naming the file
   - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ # -verbose=3 2>&1 | grep "path:" -C 3
   - ./linuxdeployqt-*.AppImage appdir/usr/bin/cool-retro-term -qmldir=./app/qml/ -qmldir=./qmltermwidget/ -verbose=2 -appimage
   
