Update snapcraft file.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,10 +1,10 @@
 name: cool-retro-term # check to see if it's available
-version: '1.1.0' # this is freakin' awesome
-summary: cool-retro-term is a terminal emulator. # 79 char long summary
+version: '1.1.1' # this is freakin' awesome
+summary: cool-retro-term is a cool and retro terminal emulator. # 79 char long summary
 description: |
   cool-retro-term is a terminal emulator which mimics the look and feel of the old cathode tube screens. It has been designed to be eye-candy, customizable, and reasonably lightweight.
 grade: stable # must be 'stable' to release into candidate/stable channels
-confinement: strict # use 'strict' once you have the right plugs
+confinement: classic # use 'strict' once you have the right plugs
 
 apps:
   cool-retro-term:
