--- a/cool-retro-term.desktop
+++ b/cool-retro-term.desktop
@@ -9,3 +9,8 @@ StartupNotify=true
 Terminal=false
 Type=Application
 Keywords=shell;prompt;command;commandline;
+Actions=NewWindow;
+
+[Desktop Action NewWindow]
+Name=New Window
+Exec=cool-retro-term
